Fixed login page form css overflow issue

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -6,24 +6,47 @@
     top:0; 
     left:0; 
     width:100%; 
-    height:130%;
+    height:100%;
 }
 
 .login-box
 {
     background-color: rgba(255, 255, 255, 0.7);
-    margin-top: 60px;
+    margin-top: 30%;
     padding: 40px;
     overflow: hidden;
+}
+
+@media screen and (max-width: 991px) 
+{
+    .recipe-brand
+    {
+        color: rgba(230, 230, 230, 0.7);
+        font-family: sans-serif;
+        font-variant: Small-Caps;
+        text-decoration: none;
+        font-size: 60px !important;
+    
+        margin-left: 2% !important;
+        margin-top: 2% !important;
+    }
 }
 
 .register-box
 {
     background-color: rgba(255, 255, 255, 0.7);
-    margin-top: -50px;
-    padding: 30px;
-    overflow: hidden;
+    padding: 35px;
+    height: 90%;
+    overflow-y: scroll;
+    position: fixed; 
+    top: 5%;
+    bottom: 10%;    
 }
+
+::-webkit-scrollbar { 
+    width: 0px; 
+}
+
 
 .login-formgroup
 {
@@ -50,13 +73,16 @@
     text-decoration: none;
 }
 
-.recipe-brand
+.recipe-brand /*BRAND FOR LARGE SCREENS*/
 {
     color: rgba(230, 230, 230, 0.7);
     font-family: sans-serif;
     font-variant: Small-Caps;
-    font-size: 60px;
     text-decoration: none;
-    margin-left: 2%;
-    margin-top: 2%;
-}
+    font-size: 80px;
+
+    float: right;
+    position: relative;
+    top: 40%;
+    right: 25%;
+} 
